--- a/rabbitmq-boot/pom.xml
+++ b/rabbitmq-boot/pom.xml
@@ -35,6 +35,12 @@
             <version>4.3.13.RELEASE</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-nop</artifactId>
+            <version>1.7.5</version>
+        </dependency>
     </dependencies>
 
     <build>
